--- a/GitHub/weather reporting web/style.css
+++ b/GitHub/weather reporting web/style.css
@@ -30,12 +30,11 @@ body {
 }
 
 .card {
-  width: 100%;
+  width: 80vmin;
   height: auto;
   background-color: rgba(0, 0, 0, 0.418);
-  max-width: 470px;
   margin: 50px auto;
-  padding: 20px;
+  padding: 3vmin;
   border-radius: 16px;
   box-shadow: 0 0 7px 2px white;
 }
@@ -47,13 +46,13 @@ body {
 }
 
 .search-bar input {
-  width: 300px;
-  height: 40px;
-  padding-left: 24px;
-  border-radius: 24px;
+  width: 55vmin;
+  height: 8vmin;
+  text-align: center;
+  border-radius: 4vmin;
   outline: none;
   border: 1px solid white;
-  font-size: 20px;
+  font-size: 3.5vmin;
   background: none;
   box-shadow: 0 0 5px 1px white;
 }
@@ -63,7 +62,7 @@ body {
 }
 
 .search-bar i {
-  font-size: 30px;
+  font-size: 6vmin;
   filter: drop-shadow(0 0 5px 1px white);
   cursor: pointer;
 }
@@ -83,54 +82,43 @@ body {
 }
 
 .weather-image img {
-  width: 150px;
+  width: 20vmin;
 }
 
 .temperature {
   margin: auto;
   text-align: center;
-  margin-top: 20px;
+  margin-top: 2.3vmin;
+}
+
+.temperature h1 {
+  font-size: 6vmin;
 }
 
 .weather-details {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 10px;
-  margin: 20px 24px 0 24px;
+  gap: 1vmin;
+  margin: 2vmin 1vmin 2vmin 1vmin;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .details {
-  width: 120px;
-  height: 100px;
-  border-radius: 16px;
+  width: 17vmin;
+  height: 15vmin;
+  border-radius: 3vmin;
   background-color: rgba(0, 0, 0, 0.418);
   box-shadow: 0 0 7px 2px white;
-  padding: 10px;
+  padding: 2vmin;
+  margin: 0 3vmin 0 3vmin;
   text-align: center;
-}
-
-.details .fa-solid {
-  font-size: 30px;
-  padding-bottom: 5px;
 }
 
 .details-data {
   display: flex;
-  gap: 10px;
+  gap: 1vmin;
+  font-size: 2.4vmin;
   flex-direction: column;
-  justify-content: space-evenly;
-}
-
-@media (min-aspect-ratio: 16/9) {
-  .back-video {
-    width: 100%;
-    height: auto;
-  }
-}
-
-@media (max-aspect-ratio: 16/9) {
-  .back-video {
-    width: auto;
-    height: 100%;
-  }
 }
