--- a/GitHub/spotify_clone/style.css
+++ b/GitHub/spotify_clone/style.css
@@ -1,48 +1,167 @@
 * {
     margin: 0;
     padding: 0;
-    height: 100vh;
     overflow: hidden;
     color: white;
 }
 
 .main {
+    height: 100vh;
+    width: 100vw;
     display: flex;
     background-color: black;
 }
 
 .sidebar {
-    background-color: black;
-    width: 340px;
+    height: 92%;
+    width: 330px;
     border-radius: 1rem;
     margin: 0.2rem;
 }
 
 .main-contant {
     background-color: #121212;
+    height: 92%;
     flex: 1;
+    /* width: 100%; */
     border-radius: 1rem;
     overflow: auto;
     margin: 0.2rem;
 }
 
-.player {
-    background-color: black;
+.media-player {
+    background-color: rgb(0, 0, 0);
     position: fixed;
     bottom: 0px;
-    height: 72px;
-    width: 100%;
+    height: 8%;
+    width: 100vw;
     margin: 0px;
 }
 
-.nav {
+a {
+    text-decoration: none;
+    color: #fff;
+}
+
+.sidebar-nav {
     background-color: #121212;
-    height: 5rem;
+    height: 100px;
     border-radius: 0.8rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0.5rem 0.75rem;
+}
+
+.nav-option {
+    line-height: 2.5rem;
+    padding: 0.5rem;
+    opacity: 0.7;
+}
+
+.nav-option:hover,
+.icon:hover {
+    opacity: 1;
+}
+
+.sidebar-nav i {
+    font-size: 1.25rem;
+}
+
+.sidebar-nav a {
+    font-size: 1.2rem;
+    margin-left: 1rem;
 }
 
 .library {
     background-color: #121212;
     border-radius: 0.8rem;
+    height: 100%;
     margin-top: 0.5rem;
+    padding: 0.5rem 0.75rem;
+}
+
+.option {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.lib-option img {
+    height: 1.25rem;
+    width: 1.25rem;
+    margin-right: 0.7rem;
+}
+
+.icon {
+    font-size: 1.25rem;
+    display: flex;
+    opacity: 0.7;
+}
+
+.icon i {
+    margin-left: 1rem;
+}
+
+.lib-box {
+    width: 100%;
+    height: 9rem;
+    margin: 0.9rem 0 0.9rem 0;
+    background-color: #232323;
+    border-radius: 0.8rem;
+}
+
+.box {
+    padding: 0.75rem 1rem;
+}
+
+.box1 {
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+.box2 {
+    font-size: 0.85rem;
+    opacity: 0.9;
+}
+
+.badge {
+    height: 1.6rem;
+    width: fit-content;
+    font-weight: 700;
+    color: black;
+    padding: 0.3rem 1rem 0 1rem;
+    margin: 0.5rem 0.75rem;
+    background-color: white;
+    border-radius: 100px;
+}
+
+.dark-badge {
+    color: white;
+    background-color: black;
+}
+
+.main-nav {
+    width: 100%;
+    height: 3rem;
+    background-color: #232323;
+    position: static;
+    top: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.main-nav-badge {
+    margin-right: 1.5rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+@media (max-width: 1000px) {
+    .hide {
+        display: none;
+    }
 }
