--- a/GitHub/spotify_clone/style.css
+++ b/GitHub/spotify_clone/style.css
@@ -20,12 +20,12 @@
 }
 
 .main-contant {
-    background-color: #121212;
     height: 92%;
+    background-color: #121212;
     flex: 1;
     /* width: 100%; */
     border-radius: 1rem;
-    overflow: auto;
+    overflow-y: auto;
     margin: 0.2rem;
 }
 
@@ -128,13 +128,15 @@ a {
 .badge {
     height: 1.6rem;
     width: fit-content;
-    font-weight: 700;
+    font-weight: 900;
     color: black;
     padding: 0.3rem 1rem 0 1rem;
     margin: 0.5rem 0.75rem;
     background-color: white;
     border-radius: 100px;
 }
+
+/* //////////////////////////  MAIN CONTAINT //////////////////////// */
 
 .dark-badge {
     color: white;
@@ -145,8 +147,9 @@ a {
     width: 100%;
     height: 3rem;
     background-color: #232323;
-    position: static;
+    position: sticky;
     top: 0;
+    z-index: 10;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -164,4 +167,47 @@ a {
     .hide {
         display: none;
     }
+}
+
+.cards-container {
+    width: 100%;
+    padding: 2rem;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.card-top {
+    margin: 1rem 2rem;
+}
+
+.card {
+    width: 25%;
+    padding: 3vmin;
+    margin: 1rem;
+    border-radius: 0.5rem;
+    background-color: #232323;
+}
+
+.card-img {
+    width: 100%;
+    border-radius: 0.5rem;
+}
+
+.card-tital {
+    font-size: 1.3rem;
+    font-weight: 600;
+    padding: 0.5rem 0;
+}
+
+.card-info {
+    font-size: 0.9rem;
+    opacity: 0.6;
+}
+
+.footer-line {
+    height: 20px;
+    width: 92%;
+    margin: 35px 10px;
+    border-top: 2px solid rgba(0, 0, 0, 0.4);
+
 }
