--- a/GitHub/spotify_clone/style.css
+++ b/GitHub/spotify_clone/style.css
@@ -31,9 +31,10 @@
 
 .media-player {
     background-color: rgb(0, 0, 0);
+    display: flex;
     position: fixed;
     bottom: 0px;
-    height: 8%;
+    height: 12%;
     width: 100vw;
     margin: 0px;
 }
@@ -209,5 +210,72 @@ a {
     width: 92%;
     margin: 35px 10px;
     border-top: 2px solid rgba(0, 0, 0, 0.4);
+}
 
+/* /////////////////////////////////  music player  //////////////////////////////////////  */
+
+.left-side {
+    width: 25%;
+    border: 1px solid red;
+}
+
+.mid-player {
+    width: 50%;
+}
+
+.right-side {
+    width: 25%;
+    border: 1px solid green;
+}
+
+.top {
+    height: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.top-icon {
+    height: 65%;
+    margin: 0 1rem;
+    scale: 0.6;
+    opacity: 0.7;
+}
+
+.play-button {
+    scale: 1.5;
+    opacity: 1;
+}
+
+.top-icon:hover {
+    opacity: 1;
+}
+
+.bottom {
+    height: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.progrees-bar {
+    width: 70%;
+    appearance: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.progrees-bar::-webkit-slider-runnable-track {
+    background-color: #ddd;
+    border-radius: 100px;
+    height: 0.2rem;
+}
+
+.progrees-bar::-webkit-slider-thumb {
+    appearance: none;
+    height: 1rem;
+    width: 1rem;
+    background-color: rgb(255, 0, 0);
+    border-radius: 50%;
+    margin-top: -6px;
 }
