--- a/GitHub/spotify_clone/style.css
+++ b/GitHub/spotify_clone/style.css
@@ -216,17 +216,36 @@ a {
 
 .left-side {
     width: 25%;
-    border: 1px solid red;
+    margin: 0.8rem;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+
+.album-img {
+    width: 3rem;
+    height: 3rem;
+}
+
+.song-info {
+    font-size: 0.7rem;
+    line-height: 1.6;
+    margin: 1rem;
+}
+
+.album-icon {
+    margin-right: 1rem;
+    height: 1.8rem;
+}
+
+.icone1 {
+    height: 1.4rem;
 }
 
 .mid-player {
     width: 50%;
 }
 
-.right-side {
-    width: 25%;
-    border: 1px solid green;
-}
 
 .top {
     height: 50%;
@@ -258,24 +277,56 @@ a {
     align-items: center;
 }
 
-.progrees-bar {
+.progress-bar {
     width: 70%;
     appearance: none;
-    background-color: transparent;
+    overflow: visible;
     cursor: pointer;
+    margin: 0.7rem;
 }
 
-.progrees-bar::-webkit-slider-runnable-track {
+.progress-bar::-webkit-slider-runnable-track {
+    appearance: none;
+    height: 0.3rem;
     background-color: #ddd;
-    border-radius: 100px;
-    height: 0.2rem;
+    border-radius: 50%;
 }
 
-.progrees-bar::-webkit-slider-thumb {
+.progress-bar::-webkit-slider-thumb {
     appearance: none;
     height: 1rem;
     width: 1rem;
-    background-color: rgb(255, 0, 0);
+    background-color: #1bd760;
     border-radius: 50%;
     margin-top: -6px;
+}
+
+.right-side {
+    width: 25%;
+    margin: 1rem;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+}
+
+.control-icon {
+    height: 2.1rem;
+    width: 2rem;
+    margin-left: 0.4rem;
+}
+
+.control-icon3,
+.control-icon4 {
+    height: 1rem;
+    width: 1rem;
+    opacity: 0.7;
+    margin-left: 1rem;
+}
+
+.vol-progress-bar {
+    width: 27%;
+    height: 0.2rem;
+    appearance: none;
+    background-color: #ddd;
+    margin-right: 1.5rem;
 }
